--- a/climb_frontend/nginx.conf
+++ b/climb_frontend/nginx.conf
@@ -3,9 +3,28 @@ server {
     server_name localhost;
 
     # Serve React app static files (CSS, JS) directly
-    location /static/ {
+    location /static/js/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/ =404;
+    }
+
+    location /static/css/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ =404;
+    }
+
+    location /static/media/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ =404;
+    }
+
+    # Handle Django static files (admin CSS, etc.) - proxy to backend
+    location /static/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Serve React app
@@ -31,10 +50,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Handle Django static files (admin CSS, etc.)
-    location /django-static/ {
-        proxy_pass http://backend:8000/static/;
     }
 }
